# automakevala

./: Makefile.am  configure.ac  vala.mk  vala_gtk.mk  valalib.mk  valalib_instrospection.mk  valalib_introspection.mk
data/: Makefile.am  atest.pc.in
src/: Makefile.am  atest-namespace.vala.in  atest.vala
tests/: Makefile.am  atest-case-test.vala  atest-test.vala  tests-config.vala.in
